# flot

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: pypi-release.yml  tests-docs-ci.yml
doc/: cmdline.rst  conf.py  development.rst  history.rst  index.rst  pyproject_toml.rst  rationale.rst  reproducible.rst
docs/: cmdline.rst  conf.py  development.rst  history.rst  pyproject_toml.rst  rationale.rst  reproducible.rst  requirements.txt
etc/scripts/: utils_requirements.py
flot/: __init__.py  __main__.py  buildapi.py  common.py  config.py  sdist.py  versionno.py  wheel.py
tests/: conftest.py  test_build_thyself.py  test_buildapi.py  test_common.py  test_config.py  test_sdist.py  test_versionno.py  test_wheel.py
tests/data/advanced_toml/: pyproject.toml
tests/data/altdistname/: pyproject.toml
tests/data/altdistname/package1/: __init__.py
tests/data/basic/: my-pyproject.toml
tests/data/basic/package1/: _version.py
tests/data/description-bad/: bad-description-ext.toml
tests/data/description-file/: package1.toml
tests/data/entrypoints_valid/: pyproject.toml
tests/data/inclusion/: module1.py  pyproject.toml
tests/data/module1_toml/: pyproject.toml
tests/data/module3/: pyproject.toml
tests/data/module4/: pyproject.toml
tests/data/module5/: pyproject.toml
tests/data/module6/: not-py-project.foo
tests/data/modulewithlocalversion/: pyproject.toml
tests/data/no-dupe-includes-in-sdist/: pyproject.toml
tests/data/normalization/: pyproject.toml
tests/data/ns1-pkg/: pyproject.toml
tests/data/ns1-pkg-mod/: pyproject.toml
tests/data/ns1-pkg-mod/ns1/: module.py
tests/data/ns1-pkg/ns1/pkg/: __init__.py
tests/data/package1/: pyproject.toml
tests/data/package2/: pyproject.toml
tests/data/pep517/: pyproject.toml
tests/data/pep621/: pyproject.toml
tests/data/pep621_nodynamic/: pyproject.toml
tests/data/scripts/: not-py-project.foo
tests/data/scripts/etc/scripts/: sdist.py  wheel.py
tests/data/with_data_dir/: pyproject.toml
