[build-system]
requires = ["flot"]
build-backend = "flot.buildapi"


[project]
name = "flot"
version = "0.7.2"
description = "Flot is a simple tool to easily build multiple packages (wheel and sdist) from a single repo without having to create a subdir or another repo for each package, and by simply listing which files to include."
authors = [
    {name = "Philippe Ombredanne", email = "pombredanne@nexb.com"},
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
maintainers = [
    {name = "Philippe Ombredanne", email = "pombredanne@nexb.com"},
]
dependencies = [
    "tomli; python_version < '3.11'",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "BSD-3-Clause AND BSD-2-clause"}
classifiers = ["Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "testpath",
    "responses",
    "pytest>=2.7.3",
    "pytest-cov",
    "tomli",
    # Validation
    "flake8",
    "doc8",
    "black",
    "isort",
    "bump-my-version",
    "tox",
    "twine",
]

doc = [
    "sphinx",
    "sphinxcontrib_github_alt",
    "sphinx-rtd-theme"
]

[project.urls]
Source = "https://github.com/nexB/flot"

[project.scripts]
flot = "flot:main"


[tool.flot]
includes = ["flot/**/*"]
metadata_files = ["LICENSE"]
editable_paths = ["."]
sdist_extra_includes = [
    "tests/**/*",
    "docs/**/*",
    "tox.ini",
    "README.rst",
    ".gitignore",
]
sdist_extra_excludes = [
    "docs/_build/**/*",
]


[tool.bumpversion]
current_version = "0.7.2"
allow_dirty = true

files = [
    { filename = "flot/__init__.py" },
    { filename = "pyproject.toml" },
    { filename = "docs/conf.py" },
]


[tool.black]
line-length = 100
include = '\.pyi?$'
skip_gitignore = true
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
  ^/venv/.*
  | ^/tests/data/.*
)
'''

[tool.isort]
profile = "black"
force_single_line = "True"
skip_gitignore = true
line_length = 100
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "docs,venv,tmp,build,dist,tests/data"


[tool.pytest.ini_options]
norecursedirs = [
   ".git",
   "dist",
   "build",
   "docs",
   "man",
   "share",
   ".cache",
   ".settings",
   "tmp",
   "venv",
   "tests/data",
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules",
]
