[build-system]
requires = ["flot >=0.5"]
build-backend = "flot.buildapi"

[project]
name = "my-python-module"
version = "0.0.1"
description = "Hyphenated package name, inferred import name"
authors = [
    {name = "Sir Robin", email = "robin@camelot.uk"}
]

[project.urls]
homepage = "http://github.com/me/python-module"

[tool.flot]
includes = ["my_python_module.py"]