[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flot.buildapi"

[project]
name = "ns1.pkg"
author = "Sir Robin"
author-email = "robin@camelot.uk"
home-page = "http://github.com/sirrobin/module1"
description-file = "EG_README.rst"
version = "1.0"
description = "module1 desc"

[tool.flot]
includes = ["ns1/**/*"]
editable_paths = ["ns1"]
