[build-system]
requires = ["flot >=0.5"]
build-backend = "flot.buildapi"

[project]
name = "module1"
version = "1.0.0"
description= " som desc "
authors = [
    {name = "Sir Röbin", email = "robin@camelot.uk"}
]
maintainers = [
    {name = "Sir Galahad"}
]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "requests >= 2.18",
    "docutils",
]
keywords = ["example", "test"]

[project.optional-dependencies]
test = [
  "pytest",
  "mock; python_version<'3.6'"
]

[project.urls]
homepage = "http://github.com/sirrobin/module1"

[project.entry-points.flit_test_example]
foo = "module1:main"

[tool.flot]
includes = ["module1a.py"]
metadata_files = ["LICENSE", "README.rst"]
